--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.zs.justdoit">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -24,7 +25,9 @@
         <activity android:name=".ipc.IPCActivity">
 
         </activity>
+        <activity android:name=".hook.InstrumentationHookActivity">
 
+        </activity>
 
         <service android:name=".handlerthread.TestNewIntentService"
             android:enabled="true"/>
